# cppLoger

./: .gitignore  CMakeLists.txt  LICENSE  Logger.hpp  README.md  main.cpp
include/: Logger.hpp
tests/: CMakeLists.txt  test_console_output.cpp  test_edge_cases.cpp  test_file_output.cpp  test_log_level.cpp  test_log_stream.cpp  test_performance.cpp  test_singleton.cpp  test_thread_safety.cpp
tests/test_utils/: test_helpers.hpp
